--- a/.github/workflows/generated-ios-12-5-1-arm64-custom-ops.yml
+++ b/.github/workflows/generated-ios-12-5-1-arm64-custom-ops.yml
@@ -6,6 +6,7 @@ name: ios-12-5-1-arm64-custom-ops
 on:
   schedule:
     - cron: 45 4,10,16,22 * * *
+  push:
     tags:
       - 'ciflow/all/*'
       - 'ciflow/ios/*'
