--- a/.github/workflows/actions/setup-ec2-linux/action.yml
+++ b/.github/workflows/actions/setup-ec2-linux/action.yml
@@ -1,5 +1,12 @@
 name: Setup EC2 Linux
-description: foobarbaz
+
+description: Set up Docker workspace on EC2
+
+inputs:
+  github-secret:
+    description: "GitHub token"
+    required: true
+
 runs:
   using: composite
   steps:
@@ -21,27 +28,35 @@ runs:
       env:
         AWS_RETRY_MODE: standard
         AWS_MAX_ATTEMPTS: "5"
+        AWS_DEFAULT_REGION: us-east-1
       run: |
         AWS_ACCOUNT_ID=$(aws sts get-caller-identity|grep Account|cut -f4 -d\")
-        !{{ add_retry_to_env() }}
+        retry () {
+            "$@"  || (sleep 1 && "$@") || (sleep 2 && "$@")
+        }
         retry aws ecr get-login-password --region "$AWS_DEFAULT_REGION" | docker login --username AWS \
             --password-stdin "$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com"
     - name: Chown workspace
       shell: bash
+      env:
+        ALPINE_IMAGE: "308535385114.dkr.ecr.us-east-1.amazonaws.com/tool/alpine"
       run: |
-        !{{ add_retry_to_env() }}
+        retry () {
+            "$@"  || (sleep 1 && "$@") || (sleep 2 && "$@")
+        }
         retry docker pull "${ALPINE_IMAGE}"
         # Ensure the working directory gets chowned back to the current user
         docker run --pull=never --rm -v "$(pwd)":/v -w /v "${ALPINE_IMAGE}" chown -R "$(id -u):$(id -g)" .
     - name: Clean workspace
       shell: bash
       run: |
+        echo "${GITHUB_WORKSPACE}"
         rm -rf "${GITHUB_WORKSPACE}"
         mkdir "${GITHUB_WORKSPACE}"
     - name: "[FB EMPLOYEES] Enable SSH (Click me for login details)"
       uses: seemethere/add-github-ssh-key@v1
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ inputs.github-secret }}
     - name: Preserve github env variables for use in docker
       shell: bash
       run: |
