--- a/.github/workflows/actions/setup-ec2-linux/action.yml
+++ b/.github/workflows/actions/setup-ec2-linux/action.yml
@@ -4,7 +4,7 @@ description: Set up Docker workspace on EC2
 
 inputs:
   github-secret:
-    description: "GitHub token"
+    description: GitHub token
     required: true
 
 runs:
