--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -16,6 +16,15 @@ jobs:
     timeout-minutes: 240
     env:
       JOB_BASE_NAME: ${{ inputs.build-environment }}-build
+      AWS_DEFAULT_REGION: us-east-1
+      IS_GHA: 1
+      PR_NUMBER: ${{ github.event.pull_request.number }}
+      SHA1: ${{ github.event.pull_request.head.sha || github.sha }}
+      SCCACHE_BUCKET: ossci-compiler-cache-circleci-v2
+      XLA_CLANG_CACHE_S3_BUCKET_NAME: ossci-compiler-clang-cache-circleci-xla
+      CUSTOM_TEST_ARTIFACT_BUILD_DIR: build/custom_test_artifacts
+      PR_LABELS: ${{ toJson(github.event.pull_request.labels.*.name) }}
+      TORCH_CUDA_ARCH_LIST: 5.2
     outputs:
       docker_image: ${{ steps.calculate-tag.outputs.docker_image }}
     steps:
@@ -35,6 +44,7 @@ jobs:
         with:
           github-secret: ${{ secrets.GITHUB_TOKEN }}
       - name: Calculate docker image
+        id: calculate-docker-image
         uses: ./.github/workflows/actions/calculate-docker-image
         with:
           always-rebuild: false
@@ -52,47 +62,52 @@ jobs:
     # {%- else %}
     #   !{{ common.calculate_docker_image(false) }}
     # {%- endif %}
-    #   - name: Pull Docker image
-    #     run: |
-    #       !{{ common.add_retry_to_env() }}
-    #       retry docker pull "${DOCKER_IMAGE}"
+      - name: Pull Docker image
+        run: |
+          retry () {
+              "$@"  || (sleep 1 && "$@") || (sleep 2 && "$@")
+          }
+          retry docker pull "${{ steps.calculate-docker-image.outputs.docker-image }}"
     #   !{{ common.parse_ref() }}
-    #   - name: Build
-    #     env:
-    #       BRANCH: ${{ steps.parse-ref.outputs.branch }}
-    #     run: |
-    #       # detached container should get cleaned up by teardown_ec2_linux
-    #       container_name=$(docker run \
-    #         -e BUILD_ENVIRONMENT \
-    #         -e JOB_BASE_NAME \
-    #         -e MAX_JOBS="$(nproc --ignore=2)" \
-    #         -e AWS_DEFAULT_REGION \
-    #         -e IS_GHA \
-    #         -e PR_NUMBER \
-    #         -e SHA1 \
-    #         -e BRANCH \
-    #         -e GITHUB_RUN_ID \
-    #         -e SCCACHE_BUCKET \
-    #       {%- if enable_xla_test == 1 %}
-    #         -e XLA_CUDA \
-    #       {%- endif %}
-    #         -e XLA_CLANG_CACHE_S3_BUCKET_NAME \
-    #         -e CUSTOM_TEST_ARTIFACT_BUILD_DIR \
-    #         -e SKIP_SCCACHE_INITIALIZATION=1 \
-    #         -e TORCH_CUDA_ARCH_LIST \
-    #         -e PR_LABELS \
-    #         -e http_proxy="!{{ common.squid_proxy }}" -e https_proxy="!{{ common.squid_proxy }}" -e no_proxy="!{{ common.squid_no_proxy }}" \
-    #         --env-file="/tmp/github_env_${GITHUB_RUN_ID}" \
-    #         --security-opt seccomp=unconfined \
-    #         --cap-add=SYS_PTRACE \
-    #         --tty \
-    #         --detach \
-    #         --user jenkins \
-    #         -v "${GITHUB_WORKSPACE}:/var/lib/jenkins/workspace" \
-    #         -w /var/lib/jenkins/workspace \
-    #         "${DOCKER_IMAGE}"
-    #       )
-    #       docker exec -t "${container_name}" sh -c 'sudo chown -R jenkins . && .jenkins/pytorch/build.sh'
+      - name: Parse ref
+        id: parse-ref
+        run: .github/scripts/parse_ref.py
+      - name: Build
+        env:
+          BRANCH: ${{ steps.parse-ref.outputs.branch }}
+        run: |
+          # detached container should get cleaned up by teardown_ec2_linux
+          container_name=$(docker run \
+            -e BUILD_ENVIRONMENT \
+            -e JOB_BASE_NAME \
+            -e MAX_JOBS="$(nproc --ignore=2)" \
+            -e AWS_DEFAULT_REGION \
+            -e IS_GHA \
+            -e PR_NUMBER \
+            -e SHA1 \
+            -e BRANCH \
+            -e GITHUB_RUN_ID \
+            -e SCCACHE_BUCKET \
+          # TODO XLA
+          # {%- if enable_xla_test == 1 %}
+          #   -e XLA_CUDA \
+          # {%- endif %}
+            -e XLA_CLANG_CACHE_S3_BUCKET_NAME \
+            -e CUSTOM_TEST_ARTIFACT_BUILD_DIR \
+            -e SKIP_SCCACHE_INITIALIZATION=1 \
+            -e TORCH_CUDA_ARCH_LIST \
+            -e PR_LABELS \
+            --env-file="/tmp/github_env_${GITHUB_RUN_ID}" \
+            --security-opt seccomp=unconfined \
+            --cap-add=SYS_PTRACE \
+            --tty \
+            --detach \
+            --user jenkins \
+            -v "${GITHUB_WORKSPACE}:/var/lib/jenkins/workspace" \
+            -w /var/lib/jenkins/workspace \
+            "${{ steps.calculate-docker-image.outputs.docker-image }}"
+          )
+          docker exec -t "${container_name}" sh -c 'sudo chown -R jenkins . && .jenkins/pytorch/build.sh'
     #   - name: Display and upload binary build size statistics (Click Me)
     #     # temporary hack: set CIRCLE_* vars, until we update
     #     # tools/stats/print_test_stats.py to natively support GitHub Actions
