--- a/.github/workflows/actions/setup-ec2-linux/action.yml
+++ b/.github/workflows/actions/setup-ec2-linux/action.yml
@@ -36,28 +36,22 @@ runs:
         }
         retry aws ecr get-login-password --region "$AWS_DEFAULT_REGION" | docker login --username AWS \
             --password-stdin "$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com"
-    # - name: Chown workspace
-    #   shell: bash
-    #   env:
-    #     ALPINE_IMAGE: "308535385114.dkr.ecr.us-east-1.amazonaws.com/tool/alpine"
-    #   run: |
-    #     retry () {
-    #         "$@"  || (sleep 1 && "$@") || (sleep 2 && "$@")
-    #     }
-    #     retry docker pull "${ALPINE_IMAGE}"
-    #     # Ensure the working directory gets chowned back to the current user
-    #     docker run --pull=never --rm -v "$(pwd)":/v -w /v "${ALPINE_IMAGE}" chown -R "$(id -u):$(id -g)" .
-    - name: Clean workspace
+    - name: Chown workspace
+      shell: bash
+      env:
+        ALPINE_IMAGE: "308535385114.dkr.ecr.us-east-1.amazonaws.com/tool/alpine"
+      run: |
+        retry () {
+            "$@"  || (sleep 1 && "$@") || (sleep 2 && "$@")
+        }
+        retry docker pull "${ALPINE_IMAGE}"
+        # Ensure the working directory gets chowned back to the current user
+        docker run --pull=never --rm -v "$(pwd)":/v -w /v "${ALPINE_IMAGE}" chown -R "$(id -u):$(id -g)" .
+    - name: "[FB EMPLOYEES] Enable SSH (Click me for login details)"
+      uses: seemethere/add-github-ssh-key@v1
+      with:
+        GITHUB_TOKEN: ${{ inputs.github-secret }}
+    - name: Preserve github env variables for use in docker
       shell: bash
       run: |
-        echo "${GITHUB_WORKSPACE}"
-        rm -rf "${GITHUB_WORKSPACE}"
-        mkdir "${GITHUB_WORKSPACE}"
-    # - name: "[FB EMPLOYEES] Enable SSH (Click me for login details)"
-    #   uses: seemethere/add-github-ssh-key@v1
-    #   with:
-    #     GITHUB_TOKEN: ${{ inputs.github-secret }}
-    # - name: Preserve github env variables for use in docker
-    #   shell: bash
-    #   run: |
-    #     env | grep '^GITHUB' > "/tmp/github_env_${GITHUB_RUN_ID}"
+        env | grep '^GITHUB' > "/tmp/github_env_${GITHUB_RUN_ID}"
