Update on "test workflow changes"
[ghstack-poisoned]

--- a/.github/workflows/actions/calculate-docker-image/action.yml
+++ b/.github/workflows/actions/calculate-docker-image/action.yml
@@ -7,8 +7,8 @@ inputs:
     description: idk
     required: true
   always-rebuild:
-    description: If set, always build a fresh docker image.
-    required: true
+    description: If set to any value, always build a fresh docker image.
+    required: false
 outputs:
   docker-image:
     description: The docker image to use for the rest of the workflow
@@ -31,7 +31,7 @@ runs:
     - name: Check if image should be built
       shell: bash
       id: check
-      if: ${{ !inputs.always-rebuild }}
+      if: ${{ inputs.always-rebuild }}
       env:
         DOCKER_IMAGE_BASE: ${{ inputs.docker-image-base }}
         BASE_REVISION: ${{ github.event.pull_request.base.sha || github.sha }}
