--- a/.github/workflows/actions/calculate-docker-image/action.yml
+++ b/.github/workflows/actions/calculate-docker-image/action.yml
@@ -12,7 +12,7 @@ inputs:
 outputs:
   docker-image:
     description: The docker image to use for the rest of the workflow
-    value: steps.calculate-tag.outputs.docker_image
+    value: ${{ steps.calculate-tag.outputs.docker-image }}
 
 runs:
   using: composite
@@ -26,8 +26,8 @@ runs:
         DOCKER_TAG=$(git rev-parse HEAD:.circleci/docker)
         echo "DOCKER_TAG=${DOCKER_TAG}" >> "${GITHUB_ENV}"
         echo "DOCKER_IMAGE=${DOCKER_IMAGE_BASE}:${DOCKER_TAG}" >> "${GITHUB_ENV}"
-        echo "::set-output name=docker_tag::${DOCKER_TAG}"
-        echo "::set-output name=docker_image::${DOCKER_IMAGE_BASE}:${DOCKER_TAG}"
+        echo "::set-output name=docker-tag::${DOCKER_TAG}"
+        echo "::set-output name=docker-image::${DOCKER_IMAGE_BASE}:${DOCKER_TAG}"
     - name: Check if image should be built
       shell: bash
       id: check
@@ -35,6 +35,8 @@ runs:
       env:
         DOCKER_IMAGE_BASE: ${{ inputs.docker-image-base }}
         BASE_REVISION: ${{ github.event.pull_request.base.sha || github.sha }}
+        DOCKER_IMAGE: ${{ steps.calculate-tag.outputs.docker-image }}
+        DOCKER_TAG:  ${{ steps.calculate-tag.outputs.docker-tag }}
       run: |
         set -x
         # Check if image already exists, if it does then skip building it
