--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -9,24 +9,14 @@ on:
       docker-image-base:
         required: true
         type: string
+      build-generates-artifacts:
+        required: true
+        type: boolean
 
 jobs:
   build:
     runs-on: [self-hosted, linux.2xlarge]
     timeout-minutes: 240
-    env:
-      JOB_BASE_NAME: ${{ inputs.build-environment }}-build
-      AWS_DEFAULT_REGION: us-east-1
-      IS_GHA: 1
-      PR_NUMBER: ${{ github.event.pull_request.number }}
-      SHA1: ${{ github.event.pull_request.head.sha || github.sha }}
-      SCCACHE_BUCKET: ossci-compiler-cache-circleci-v2
-      XLA_CLANG_CACHE_S3_BUCKET_NAME: ossci-compiler-clang-cache-circleci-xla
-      CUSTOM_TEST_ARTIFACT_BUILD_DIR: build/custom_test_artifacts
-      PR_LABELS: ${{ toJson(github.event.pull_request.labels.*.name) }}
-      TORCH_CUDA_ARCH_LIST: 5.2
-    outputs:
-      docker_image: ${{ steps.calculate-tag.outputs.docker_image }}
     steps:
       - name: Clean workspace
         run: |
@@ -75,6 +65,18 @@ jobs:
       - name: Build
         env:
           BRANCH: ${{ steps.parse-ref.outputs.branch }}
+          JOB_BASE_NAME: ${{ inputs.build-environment }}-build
+          # TODO duplicated
+          AWS_DEFAULT_REGION: us-east-1
+          IS_GHA: 1
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          SHA1: ${{ github.event.pull_request.head.sha || github.sha }}
+          SCCACHE_BUCKET: ossci-compiler-cache-circleci-v2
+          XLA_CLANG_CACHE_S3_BUCKET_NAME: ossci-compiler-clang-cache-circleci-xla
+          CUSTOM_TEST_ARTIFACT_BUILD_DIR: build/custom_test_artifacts
+          PR_LABELS: ${{ toJson(github.event.pull_request.labels.*.name) }}
+          TORCH_CUDA_ARCH_LIST: 5.2
+          DOCKER_IMAGE: ${{ steps.calculate-docker-image.outputs.docker-image }}
         run: |
           # detached container should get cleaned up by teardown_ec2_linux
           container_name=$(docker run \
@@ -105,46 +107,52 @@ jobs:
             --user jenkins \
             -v "${GITHUB_WORKSPACE}:/var/lib/jenkins/workspace" \
             -w /var/lib/jenkins/workspace \
-            ${{ steps.calculate-docker-image.outputs.docker-image }}
+            "${DOCKER_IMAGE}"
           )
           docker exec -t "${container_name}" sh -c 'sudo chown -R jenkins . && .jenkins/pytorch/build.sh'
-    #   - name: Display and upload binary build size statistics (Click Me)
-    #     # temporary hack: set CIRCLE_* vars, until we update
-    #     # tools/stats/print_test_stats.py to natively support GitHub Actions
-    #     env:
-    #       SCRIBE_GRAPHQL_ACCESS_TOKEN: ${{ secrets.SCRIBE_GRAPHQL_ACCESS_TOKEN }}
-    #       BRANCH: ${{ steps.parse-ref.outputs.branch }}
-    #       TAG: ${{ steps.parse-ref.outputs.tag }}
-    #       WORKFLOW_ID: '${{ github.run_id }}'
-    #     run: |
-    #       COMMIT_TIME=$(git log --max-count=1 --format=%ct || echo 0)
-    #       export COMMIT_TIME
-    #       pip3 install requests==2.26 boto3==1.16.34
-    #       python3 -m tools.stats.upload_binary_size_to_scuba || exit 0
-    #   - name: Chown workspace
-    #     run: |
-    #       # Ensure the working directory gets chowned back to the current user
-    #       docker run --rm -v "$(pwd)":/v -w /v "${ALPINE_IMAGE}" chown -R "$(id -u):$(id -g)" .
-    #   {%- if build_generates_artifacts %}
-    #   - name: Archive artifacts into zip
-    #     run: |
-    #       zip -1 -r artifacts.zip dist/ build/custom_test_artifacts build/lib build/bin .pytorch-test-times.json
-    #   - uses: !{{ common.upload_artifact_s3_action }}
-    #     name: Store PyTorch Build Artifacts on S3
-    #     with:
-    #       name: ${{ env.BUILD_ENVIRONMENT }}
-    #       retention-days: 14
-    #       if-no-files-found: error
-    #       path:
-    #         artifacts.zip
-    #   {%- endif %}
-    #   !{{ common.teardown_ec2_linux() }}
-    #   - name: Hold runner for 2 hours or until ssh sessions have drained
-    #     # Always hold for active ssh sessions
-    #     if: always()
-    #     run: .github/scripts/wait_for_ssh_to_drain.sh
-    #   - name: Clean up docker images
-    #     if: always()
-    #     run: |
-    #       # Prune all of the docker images
-    #       docker system prune -af
+      - name: Display and upload binary build size statistics (Click Me)
+        # temporary hack: set CIRCLE_* vars, until we update
+        # tools/stats/print_test_stats.py to natively support GitHub Actions
+        env:
+          SCRIBE_GRAPHQL_ACCESS_TOKEN: ${{ secrets.SCRIBE_GRAPHQL_ACCESS_TOKEN }}
+          BRANCH: ${{ steps.parse-ref.outputs.branch }}
+          TAG: ${{ steps.parse-ref.outputs.tag }}
+          WORKFLOW_ID: ${{ github.run_id }}
+        run: |
+          COMMIT_TIME=$(git log --max-count=1 --format=%ct || echo 0)
+          export COMMIT_TIME
+          pip3 install requests==2.26 boto3==1.16.34
+          python3 -m tools.stats.upload_binary_size_to_scuba || exit 0
+      - name: Archive artifacts into zip
+        if: ${{ inputs.build-generates-artifacts }}
+        run: |
+          zip -1 -r artifacts.zip dist/ build/custom_test_artifacts build/lib build/bin .pytorch-test-times.json
+      - uses: seemethere/upload-artifact-s3@v3
+        name: Store PyTorch Build Artifacts on S3
+        if: ${{ inputs.build-generates-artifacts }}
+        with:
+          name: ${{ inputs.build-environment }}
+          retention-days: 14
+          if-no-files-found: error
+          path:
+            artifacts.zip
+      - name: Chown workspace
+        env:
+          # TODO duplicated
+          ALPINE_IMAGE: "308535385114.dkr.ecr.us-east-1.amazonaws.com/tool/alpine"
+        run: |
+          # Ensure the working directory gets chowned back to the current user
+          docker run --rm -v "$(pwd)":/v -w /v "${ALPINE_IMAGE}" chown -R "$(id -u):$(id -g)" .
+      - name: Hold runner for 2 hours or until ssh sessions have drained
+        # TODO working-directory: !{{ pytorch_directory }}
+        # Always hold for active ssh sessions
+        if: always()
+        run: .github/scripts/wait_for_ssh_to_drain.sh
+      - name: Kill containers, clean up images
+        if: always()
+        run: |
+          # ignore expansion of "docker ps -q" since it could be empty
+          # shellcheck disable=SC2046
+          docker stop $(docker ps -q) || true
+          # Prune all of the docker images
+          docker system prune -af
