--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -13,3 +13,4 @@ jobs:
     with:
       build-environment: linux-xenial-py3.7-gcc5.4
       docker-image-base: 308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3.7-gcc5.4
+      build-generates-artifacts: true
