--- a/.github/workflows/generated-linux-bionic-cuda10.2-py3.9-gcc7.yml
+++ b/.github/workflows/generated-linux-bionic-cuda10.2-py3.9-gcc7.yml
@@ -12,6 +12,7 @@ on:
       - 'ciflow/slow/*'
       - 'ciflow/trunk/*'
     branches:
+      - master
       - main
       - release/*
   workflow_dispatch:
