--- a/.github/workflows/generated-linux-bionic-rocm4.5-py3.7.yml
+++ b/.github/workflows/generated-linux-bionic-rocm4.5-py3.7.yml
@@ -12,6 +12,7 @@ on:
       - 'ciflow/rocm/*'
       - 'ciflow/trunk/*'
     branches:
+      - master
       - main
       - release/*
   workflow_dispatch:
