--- a/.github/workflows/generated-linux-vulkan-bionic-py3.7-clang9.yml
+++ b/.github/workflows/generated-linux-vulkan-bionic-py3.7-clang9.yml
@@ -13,6 +13,7 @@ on:
       - 'ciflow/trunk/*'
       - 'ciflow/vulkan/*'
     branches:
+      - master
       - main
       - release/*
   workflow_dispatch:
