--- a/.github/workflows/generated-linux-xenial-cuda11.3-py3.7-gcc7.yml
+++ b/.github/workflows/generated-linux-xenial-cuda11.3-py3.7-gcc7.yml
@@ -12,6 +12,7 @@ on:
       - 'ciflow/linux/*'
       - 'ciflow/trunk/*'
     branches:
+      - master
       - main
       - release/*
   workflow_dispatch:
