--- a/.github/workflows/generated-linux-xenial-py3-clang5-mobile-custom-build-static.yml
+++ b/.github/workflows/generated-linux-xenial-py3-clang5-mobile-custom-build-static.yml
@@ -12,6 +12,7 @@ on:
       - 'ciflow/mobile/*'
       - 'ciflow/trunk/*'
     branches:
+      - master
       - main
       - release/*
   workflow_dispatch:
