--- a/.github/workflows/generated-linux-xenial-py3.7-clang7-onnx.yml
+++ b/.github/workflows/generated-linux-xenial-py3.7-clang7-onnx.yml
@@ -13,6 +13,7 @@ on:
       - 'ciflow/onnx/*'
       - 'ciflow/trunk/*'
     branches:
+      - master
       - main
       - release/*
   workflow_dispatch:
