--- a/.github/workflows/generated-macos-10-15-py3-lite-interpreter-x86-64.yml
+++ b/.github/workflows/generated-macos-10-15-py3-lite-interpreter-x86-64.yml
@@ -6,6 +6,7 @@ name: macos-10-15-py3-lite-interpreter-x86-64
 on:
   push:
     branches:
+      - master
       - main
       - release/*
     tags:
