--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -3,7 +3,9 @@ name: Create Release
 on:
   push:
     tags: ['v*']
-    branches: [main]
+    branches:
+      - master
+      - main
   release:
     types: [published]
   pull_request:
