--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -20,7 +20,7 @@ on:
 # TODO xla, rocm
 env:
   IN_CI: 1
-  IS_GHA: 1  # TODO delete in favor of GITHUB_ACTIONS
+  IS_GHA: 1 # TODO delete in favor of GITHUB_ACTIONS
 
 jobs:
   build:
@@ -183,6 +183,7 @@ jobs:
           }
           retry docker pull ${{ needs.build.outputs.docker-image }}
       - name: Determine shm-size
+        id: shm
         run: |
           shm_size="1g"
           case "${BUILD_ENVIRONMENT}" in
@@ -209,18 +210,20 @@ jobs:
         run: .github/scripts/parse_ref.py
       - name: Test
         env:
-          JOB_BASE_NAME: ${{ inputs.build-environment }}-test
-          TEST_CONFIG: default
-          SHARD_NUMBER: ${{ matrix.shard }}
-          NUM_TEST_SHARDS: ${{ matrix.num_shards }}
-          PR_BODY: ${{ github.event.pull_request.body }}
           BUILD_ENVIRONMENT: ${{ inputs.build-environment }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
           BRANCH: ${{ steps.parse-ref.outputs.branch }}
           CUSTOM_TEST_ARTIFACT_BUILD_DIR: build/custom_test_artifacts
           SHA1: ${{ github.event.pull_request.head.sha || github.sha }}
           PYTORCH_RETRY_TEST_CASES: 1
-        timeout-minutes: 240  # todo
+          JOB_BASE_NAME: ${{ inputs.build-environment }}-test
+          TEST_CONFIG: default
+          SHARD_NUMBER: ${{ matrix.shard }}
+          NUM_TEST_SHARDS: ${{ matrix.num_shards }}
+          PR_BODY: ${{ github.event.pull_request.body }}
+          SCCACHE_BUCKET: ossci-compiler-cache-circleci-v2
+          XLA_CLANG_CACHE_S3_BUCKET_NAME: ossci-compiler-clang-cache-circleci-xla
+        timeout-minutes: 240
         run: |
           set -x
 
@@ -255,12 +258,15 @@ jobs:
             -e PR_BODY \
             -e PYTORCH_RETRY_TEST_CASES \
             -e PR_LABELS \
+            -e MAX_JOBS="$(nproc --ignore=2)" \
+            -e SCCACHE_BUCKET \
+            -e XLA_CLANG_CACHE_S3_BUCKET_NAME \
             --env-file="/tmp/github_env_${GITHUB_RUN_ID}" \
             --ulimit stack=10485760:83886080 \
             --security-opt seccomp=unconfined \
             --cap-add=SYS_PTRACE \
             --ipc=host \
-            --shm-size="${SHM_SIZE}" \
+            --shm-size=${{ steps.shm.outputs.shm-size }} \
             --tty \
             --detach \
             --name="${container_name}" \
