--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -14,3 +14,12 @@ jobs:
       build-environment: linux-xenial-py3.7-gcc5.4
       docker-image-base: 308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3.7-gcc5.4
       build-generates-artifacts: true
+      test-matrix: |
+        { include: [
+          { shard: 1, num-shards: 2, config: "default", runner-type: "linux.2xlarge" },
+          { shard: 2, num-shards: 2, config: "default", runner-type: "linux.2xlarge" },
+          { shard: 1, num-shards: 1, config: "distributed", runner-type: "linux.2xlarge" },
+          { shard: 1, num-shards: 1, config: "docs_test", runner-type: "linux.2xlarge" },
+          { shard: 1, num-shards: 1, config: "backwards_compat", runner-type: "linux.2xlarge" },
+          { shard: 1, num-shards: 1, config: "jit_legacy", runner-type: "linux.2xlarge" }
+        ]}
