Update on "test workflow changes"
[ghstack-poisoned]

--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -182,11 +182,16 @@ jobs:
               "$@"  || (sleep 1 && "$@") || (sleep 2 && "$@")
           }
           retry docker pull ${{ needs.build.outputs.docker-image }}
+      - name: Install nvidia driver, nvidia-docker runtime, set GPU_FLAG
+        if: contains(inputs.build-environment, "cuda") && !contains(matrix.config, nogpu)
+        run: |
+          bash .github/scripts/install_nvidia_utils_linux.sh
+          echo "GPU_FLAG=--gpus all" >> "${GITHUB_ENV}"
       - name: Determine shm-size
         id: shm
         run: |
           shm_size="1g"
-          case "${BUILD_ENVIRONMENT}" in
+          case "${{ inputs.build-environment }}" in
             *cuda*)
               shm_size="2g"
               ;;
